# parg

./: .travis.yml  CMakeLists.txt  COPYING  Doxyfile  LICENSE  README.md  parg.c  parg.h
.github/workflows/: parg-ci-workflow.yaml
test/: test_parg.c
